# embviewer-android

./: .gitignore  .gitmodules  New Text Document.txt  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  local.properties  proguard-rules.pro  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  emb_jni.cpp  embbridge.cpp  native-lib.cpp  pattern.h
app/src/main/cpp/libembroidery/: credits.yml
app/src/main/cpp/libembroidery/src/: pattern.cpp
app/src/main/java/com/example/embviewer/: DesignMetadata.kt  EmbBridge.kt  EmbViewerApp.kt  FileUtils.kt  MainActivity.kt  NativeBridge.kt  proguard-rules.pro
app/src/main/java/com/example/embviewer/native/: NativeLib.kt
app/src/main/java/com/example/embviewer/ui/components/: FilePicker.kt  FilePickerButton.kt
app/src/main/java/com/example/embviewer/ui/preview/: Preview.kt
app/src/main/java/com/example/embviewer/ui/screens/: HomeScreen.kt  MainScreen.kt  PermissionScreen.kt
app/src/main/java/com/example/embviewer/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/embviewer/ui/viewmodel/: ConverterViewModel.kt
app/src/main/java/com/example/embviewer/utils/: EmbroideryConverter.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: file_paths.xml  fileprovider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
